tests/errors/surf_cont_02.ki
# string index out of range
var s = "hi"
discard s[10]
